syntax = "proto3";

package protobuf;

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package = "github.com/yorqinbek/simple_bank"; 

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){}
}